# picSort

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
docs/: README.md  architecture.md  error-handling.md  extensions.md  functional-requirements.md  spec.md  testing.md  ui-ux-design.md
docs/matching_spec_bundle/: SPEC.md  normalizationTables.ts
docs/matching_spec_bundle/data/: ゼンレスゾーンゼロ _Zenless Zone Zero_绝区零.csv
samples/: sample_wordlist.csv
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/commands/: file_ops.rs  mod.rs  thumbnail.rs  watcher.rs
src-tauri/src/config/: mod.rs  settings.rs
src/components/: DestButton.test.tsx  DestButton.tsx  Header.tsx  ImageViewer.test.tsx  ImageViewer.tsx  MediaViewer.tsx  SettingsModal.tsx  StatusBar.test.tsx  StatusBar.tsx  ThumbnailGrid.tsx  ThumbnailItem.tsx  WelcomeModal.test.tsx  WelcomeModal.tsx
src/contexts/: AppContext.test.tsx  AppContext.tsx  LanguageContext.tsx  ThemeContext.tsx
src/hooks/: useHistory.ts  useKeyboard.test.tsx  useKeyboard.ts  useTauriCommands.test.ts  useTauriCommands.ts  useThumbnails.ts
src/i18n/: en.json  ja.json
src/test/: setup.ts  testUtils.tsx
src/types/: index.ts
src/utils/: csv.ts  matching.ts  normalize.ts  path.test.ts  path.ts
