[package]
name = "picsort"
version = "0.1.0"
description = "画像仕分けアプリ"
authors = ["you"]
license = "MIT"
repository = "https://github.com/lietsee/picSort"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "picsort_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
natord = "1.0"

[dev-dependencies]
tempfile = "3"
