[package]
name = "picsort"
version = "0.1.0"
description = "画像仕分けアプリ"
authors = ["you"]
license = "MIT"
repository = "https://github.com/lietsee/picSort"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "picsort_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
natord = "1.0"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-util = "0.7"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
